-> new FGSEA group comparison functions are added; -> new annotation (iterative annotation) and it's downstream evaluation scripts are added; -> genomic TILEs integration scripts are added and analysis are proceed

--- a/scripts/spatial_aware_analysis/spatial_distance_evaluation_of_TME_element/region_based_TME_element_evaluation_fgsea.ipynb
+++ b/scripts/spatial_aware_analysis/spatial_distance_evaluation_of_TME_element/region_based_TME_element_evaluation_fgsea.ipynb
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "f8afb87b",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1340,8 @@
    ],
    "source": [
     "#pre_res.res2d.sort_values(by=\"FDR q-val\")\n",
-    "pre_res.res2d[pre_res.res2d[\"FDR q-val\"] < 0.05] "
+    "pre_res.res2d[pre_res.res2d[\"FDR q-val\"] < 0.05] \n",
+    "\n"
    ]
   },
   {
@@ -1367,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "793fc64b",
    "metadata": {},
    "outputs": [
@@ -1383,6 +1384,7 @@
     }
    ],
    "source": [
+    "\n",
     "axs = pre_res.plot(terms=[terms[0], terms[1], terms[2], terms[4]],\n",
     "#legend_kws={'loc': (1.2, 0)}, # set the legend loc\n",
     "show_ranking=True, # whether to show the second yaxis\n",
